force-app/main/default/objects/Contractor_Certification__c/Contractor_Certification__c.object-meta.xml
<CustomObject>
    <description>Tracks Salesforce and related certifications for contractors</description>
    <label>Contractor Certification</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Certification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contractor Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>