force-app/main/default/objects/Contractor_Certification__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(
  ISBLANK( Expiration_Date__c ),
  true,
  Expiration_Date__c &gt;= TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>