force-app/main/default/objects/Contractor_Certification__c/fields/Certification_Name__c.field-meta.xml
<CustomField>
    <fullName>Certification_Name__c</fullName>
    <label>Certification Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Administrator</fullName>
            </value>
            <value>
                <fullName>Platform App Builder</fullName>
            </value>
            <value>
                <fullName>Data Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Integration Architecture Designer</fullName>
            </value>
            <value>
                <fullName>Data Architect</fullName>
            </value>
            <value>
                <fullName>AI Associate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>