force-app/main/default/objects/Contractor_Certification__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <label>Contractor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Certifications</relationshipLabel>
    <relationshipName>Contractor_Certifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>